# ToyC

./: .gitignore  CMakeLists.txt  LICENSE  print.c  syntax.toy  test.c_not
src/: containers.hpp  main.cpp  parser.y  string_cache.cpp  string_cache.hpp  tokens.l
src/ast/: ast_resolver.cpp  ast_resolver.hpp  expression.hpp  function.hpp  module.hpp  node.hpp  statement.hpp  struct.hpp  type.hpp  types.hpp
src/llvm/: llvm_code_gen.cpp  llvm_code_gen.hpp  scope_block.cpp  scope_block.hpp
